--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color:#777;
     background-color:#777;
-    width: 960px;
+    width: 80%;
     margin: auto;
     font-size: 18px;
 }
@@ -11,39 +11,41 @@ body {
 header  {
     background: #ebebeb;
     text-align: center;
-    padding-top: 40px;
+    padding: 5%;
     margin-top: 1%;
 }
 
 nav  {
     background: #ebebeb;
     text-align: center;
-    padding-top: 40px;
+    padding: 5%;
     margin-top: 1%;
 }
 
 footer {
     background: #ebebeb;
     text-align: center;
-    margin-top: 203px;
-    padding: 29px;
+    padding: 5%;
+    margin-top: 276px;
 }
 
 
 aside {
     background: #ebebeb;
-    text-align: center;
     float: right;
-    height: 205px;
-    width: 428px;
+    width: 45%;
+    height: 200px;
+    text-align: center;
+    padding-top: 5%;
+    
 }
 
 section {
     background: #ebebeb;
     text-align: center;
-    width: 493px;
+    width: 50%;
     float: left;
-    padding: 10px;
+    padding: 15px;
 }
 
 article {
@@ -51,25 +53,26 @@ article {
     background: #777;
     height: 144px;
     margin-top:4%;
+    padding: 20px;
 }
 
 h1 {
     color: #777;
 background: #ebebeb;
-width: 90%;
+width: 92%;
 margin: auto;
 margin-top: 5%;
-padding: 5px;
+padding: 2%;
 
 }
 
 p {
     color: #777;
     background: #ebebeb;
-    width: 90%;
+    width: 92%;
     margin: auto;
     margin-top: 2%;
-    padding:5px;
+    padding: 2%;
 }
 
 
